Node_Package/Node_lg_groundtruth_data_ws/lg_groundtruth_data_ws/log/build_2021-01-21_16-45-52/lg_sub_groundtruth/stderr.log
  File "/home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth/lg_gt3d_subscriber.py", line 287
    report_file.write("LG bounding box center cordinate's : " + str(x_center) +" , "+ str(y_center) +" , "+ str(z_center) '\n')
                                                                                                                             ^
SyntaxError: invalid syntax

